fixed z index on mobile navigation

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,6 +4,7 @@
   width: 100vw;
   background-color: white;
   height: 3rem;
+  z-index: 10;
   .header-content {
     width: 100%;
     height: 100%;
@@ -13,6 +14,7 @@
     .header-group {
       display: flex;
       margin: 0 1rem;
+      gap: 1rem;
 
       .header-item {
         padding: 1%;
@@ -20,9 +22,9 @@
       }
     }
     .group2 {
-      width: 19%;
-      justify-content: space-between;
+      width: 20%;
 
+      gap: 1rem;
       button {
         background-color: white;
         border: none;
@@ -35,7 +37,6 @@
           float: right;
           position: absolute;
           color: white;
-
           font-size: 0.7rem;
           border-radius: 10px;
           height: 1rem;
@@ -91,10 +92,35 @@
       }
     }
   }
-  .mobile.link-list {
-    top: 3rem;
-    z-index: 3;
-    background-color: white;
-    margin: 0;
+  .mobile.link-list-container {
+    position: fixed;
+    display: flex;
+    .mobile.link-list {
+      top: 0;
+      z-index: 11;
+      background-color: white;
+      margin: 0;
+      font-weight: 700;
+      padding-left: 1rem;
+      height: 100vh;
+      width: 60vw;
+
+      z-index: 3;
+      li {
+        a {
+          color: black;
+        }
+      }
+    }
+
+    .blackout {
+      background-color: black;
+      opacity: 0.7;
+      width: 40vw;
+      height: 100vh;
+      z-index: 11;
+
+      justify-self: flex-end;
+    }
   }
 }
